--- a/Unity 2d Action/Assembly-CSharp.csproj
+++ b/Unity 2d Action/Assembly-CSharp.csproj
@@ -41,6 +41,7 @@
      <Compile Include="Assets\Scripts\Item\BaseItemObject.cs" />
      <Compile Include="Assets\Scripts\Obstacle\BaseObstacleController.cs" />
      <Compile Include="Assets\Scripts\Obstacle\ReciprocatingObstacle.cs" />
+     <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\System\GameManager.cs" />
      <Compile Include="Assets\Scripts\System\MoveSceneManager.cs" />
      <Compile Include="Assets\Scripts\System\SaveData.cs" />
